# Lost-in-Venice---Game

./: .gitignore  BackgroundFragmentShader.fragmentshader  CMakeLists.txt  Lost-in-Venice.sln  Lost-in-Venice.vcxproj  Lost-in-Venice.vcxproj.filters  README.md  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  WaterFragmentShader.fragmentshader  WaterVertexShader.vertexshader  main.cpp  shader.cpp
Camera/: camera.cpp  camera.h
